# cluedin-magic

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb
cluedin_magic/: __init__.py  cluedin_magic.py
tests/: ctx.py  test_cluedin_magic.py  test_get_context.py  test_help.py  test_parse_params.py  test_search.py
