[tool.poetry]
name = "cluedin-magic"
version = "0.1.0"
description = "IPython magic for CluedIn"
authors = ["Roman Klimenko <roman@klimenko.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
